# emulator

./: .gitignore  .gitmodules  README.md  a.out  test.cpp
.stversions/chip8/: main.sync-conflict-20230726-154658-7ZOPLLI~20230726-154728.cpp
NES/: .gitignore  :w  CMakeCache.txt  CMakeLists.txt  Makefile  NES  \  a.out  bus.cpp  bus.h  cartridge.cpp  cartridge.h  cmake_install.cmake  controller.h  cpu.cpp  cpu.h  log.txt  main.cpp  main.s  mapper.cpp  mapper.h  memory.cpp  memory.h  mirroring.h  ppu.cpp  ppu.h  ppu.h.back  test.cpp
NES/src/: cpu.cpp  cpu.hpp  main.cpp  ppu.cpp  ppu.hpp  rom.cpp  rom.hpp  template.txt
NES_rewrite/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  bus.h  cartridge.cpp  cartridge.h  cmake_install.cmake  cpu.cpp  cpu.h  main.cpp
chip8/: a.out  chip8.cpp  chip8.h  gameoutput.txt.REMOVED.git-id  main.cpp  test.cpp
chip8/sdltest/: a.out  test.cpp
gameboy_zig/: build.zig  build.zig.zon
gameboy_zig/.zig-cache/o/61a3fad2d20742fef5bdcbdff39897e9/: gameboy_zig
sdltest/: Makefile  main  main.cpp
